--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-highlight.js": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
@@ -36,6 +37,7 @@
     "bulma": "^0.8.0",
     "copy-webpack-plugin": "^5.1.1",
     "node-sass": "^4.13.0",
+    "raw-loader": "^4.0.0",
     "react-app-rewired": "^2.1.5"
   }
 }
