--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-highlight.js": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --module-bind 'txt=raw-loader'",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-inline-import": "^3.0.0",
     "bulma": "^0.8.0",
     "copy-webpack-plugin": "^5.1.1",
     "node-sass": "^4.13.0",
